--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
             </div>
         <!--Card End-->
-
+		<div class="footer">&copy; Octo Consulting 2015</div>
         </div>
         
         <!--Fixed Right Menu-->
