--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -119,11 +120,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -132,11 +134,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -145,11 +148,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -158,11 +162,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -171,11 +176,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -184,11 +190,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -197,11 +204,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -210,11 +218,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -223,11 +232,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
@@ -236,11 +246,12 @@
                 	<div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><div class="cardFeatured fa fa-star-o"></div>
                 </div>
             </div>
-        <!--Card End--><!--Card-->
+        <!--Card End-->
+        <!--Card-->
         	<div class="card">
-            	<div><img class="cardImage" src="images/inflo.png"/></div>
+            	<div><img class="cardImage" src="images/inflo.png" data-toggle="modal" data-target="#modalTest"/></div>
            		<div class="cardContent">
-            		<div class="cardTitle">Inflo</div>
+            		<div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalTest">Inflo</a></div>
                     <div class="cardSubTitle">Sub Title</div>
                     <hr/>
                     <div class="cardCatagory">Healthcare</div> 
