Updated Nav Categories

--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@
       </ul>
       <hr/>
       <div class="btn-group-vertical filterGroup" role="group">
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<span class="fa fa-hand-peace-o"></span></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<span class="fa fa-hand-peace-o"></span></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<span class="fa fa-hand-peace-o"></span></button>
 	  </div>
       <div class="btn-group-vertical filterGroup" role="group">
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<span class="fa fa-hand-peace-o"></span></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<span class="fa fa-hand-peace-o"></span></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<span class="fa fa-hand-peace-o"></span></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<span class="fa fa-hand-peace-o"></span></button>
 	  </div>
       <div class="sociaMediaLinks">
         <div class="octoLink"><img height="30px" src="images/Octo_Logo_Informal.svg" alt="Octo Consulting Logo"/></div>
@@ -213,17 +212,16 @@
             </div>
             <!--Filter-->
             <div class="btn-group-vertical filterGroup" role="group">
-              <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
- 		      <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
-              <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
- 		      <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Tech Filter<span class="fa fa-hand-peace-o"></span></button>
-		    </div>
-            <div class="btn-group-vertical filterGroup" role="group">
-              <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
- 		      <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
-              <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
- 		      <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Category Filter<span class="fa fa-hand-peace-o"></span></button>
-		    </div>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<span class="fa fa-hand-peace-o"></span></button>
+ 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<span class="fa fa-hand-peace-o"></span></button>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<span class="fa fa-hand-peace-o"></span></button>
+	  		</div>
+      		<div class="btn-group-vertical filterGroup" role="group">
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<span class="fa fa-hand-peace-o"></span></button>
+ 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<span class="fa fa-hand-peace-o"></span></button>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<span class="fa fa-hand-peace-o"></span></button>
+ 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<span class="fa fa-hand-peace-o"></span></button>
+	  		</div>
             <div class="sociaMediaLinks">
       		  <div class="octoLink"><img height="30px" src="images/Octo_Logo_Informal.svg" alt="Octo Consulting Logo"/></div>
               <div class="fa fa-2x fa-facebook-square socialIcon"></div>
