Added place holder Icons

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
       </ul>
       <hr/>
       <div class="btn-group-vertical filterGroup" role="group">
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<span class="fa fa-hand-peace-o"></span></button>
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<span class="fa fa-hand-peace-o"></span></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<img class="menuIcon" src="images/microservices-icon.svg"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<img class="menuIcon" src="images/api.svg"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<img class="menuIcon" src="images/big-data-icon.svg"/></button>
 	  </div>
       <div class="btn-group-vertical filterGroup" role="group">
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<span class="fa fa-hand-peace-o"></span></button>
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<span class="fa fa-hand-peace-o"></span></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<span class="fa fa-hand-peace-o"></span></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<img class="menuIcon" src="images/noun_148183_cc.svg"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<img class="menuIcon" src="images/noun_139819_cc.svg"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<img class="menuIcon" src="images/noun_8293_cc.svg"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<img class="menuIcon" src="images/noun_122_cc.svg"/></button>
 	  </div>
       <div class="sociaMediaLinks">
         <div class="octoLink"><img height="30px" src="images/Octo_Logo_Informal.svg" alt="Octo Consulting Logo"/></div>
@@ -139,7 +139,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetails">Inflo</a></div>
               <div class="cardSubTitle">Location Data</div>
               <hr>
-              <div class="cardCatagory">Healthcare, Census</div>
+              <div class="cardCatagory">Healthcare, Big Data, API/Open Data</div>
               <img class="capabilityIcons" src="images/HTML5_Badge.png" data-toggle="tooltip" data-placement="top" title="HTML5" alt="HTML5"/><img class="capabilityIcons" src="images/css3-Badge.png" data-toggle="tooltip" data-placement="top" title="CSS3" alt="CSS3"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/>
            	</div>
             <div class="cardFooter">
@@ -155,7 +155,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetails">medCheck</a></div>
               <div class="cardSubTitle">Check Once, Choose Once</div>
               <hr>
-              <div class="cardCatagory">Healthcare, Census</div>
+              <div class="cardCatagory">Healthcare, Big Data, API/Open Data</div>
               <img class="capabilityIcons" src="images/HTML5_Badge.png" data-toggle="tooltip" data-placement="top" title="HTML5" alt="HTML5"/><img class="capabilityIcons" src="images/css3-Badge.png" data-toggle="tooltip" data-placement="top" title="CSS3" alt="CSS3"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/>
            	</div>
             <div class="cardFooter">
@@ -171,7 +171,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetails">RefusalCheck</a></div>
               <div class="cardSubTitle">FDA Drug and Product Refusals Visualized</div>
               <hr>
-              <div class="cardCatagory">FDA</div>
+              <div class="cardCatagory">Healthcare, Big Data, API/Open Data</div>
               <img class="capabilityIcons" src="images/HTML5_Badge.png" data-toggle="tooltip" data-placement="top" title="HTML5" alt="HTML5"/><img class="capabilityIcons" src="images/css3-Badge.png" data-toggle="tooltip" data-placement="top" title="CSS3" alt="CSS3"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/>
            	</div>
             <div class="cardFooter">
@@ -187,7 +187,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetails">App Name</a></div>
               <div class="cardSubTitle">Sub Title</div>
               <hr>
-              <div class="cardCatagory">Category1, Category2</div>
+              <div class="cardCatagory">Financial Services, Microservices</div>
               <img class="capabilityIcons" src="images/HTML5_Badge.png" data-toggle="tooltip" data-placement="top" title="HTML5" alt="HTML5"/><img class="capabilityIcons" src="images/css3-Badge.png" data-toggle="tooltip" data-placement="top" title="CSS3" alt="CSS3"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/>
            	</div>
             <div class="cardFooter">
@@ -212,15 +212,15 @@
             </div>
             <!--Filter-->
             <div class="btn-group-vertical filterGroup" role="group">
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<span class="fa fa-hand-peace-o"></span></button>
- 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<span class="fa fa-hand-peace-o"></span></button>
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<span class="fa fa-hand-peace-o"></span></button>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<img class="menuIcon" src="images/microservices-icon.svg"/></button>
+ 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<img class="menuIcon" src="images/api.svg"/></button>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<img class="menuIcon" src="images/big-data-icon.svg"/></button>
 	  		</div>
       		<div class="btn-group-vertical filterGroup" role="group">
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<span class="fa fa-hand-peace-o"></span></button>
- 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<span class="fa fa-hand-peace-o"></span></button>
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<span class="fa fa-hand-peace-o"></span></button>
- 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<span class="fa fa-hand-peace-o"></span></button>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<img class="menuIcon" src="images/noun_148183_cc.svg"/></button>
+ 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<img class="menuIcon" src="images/noun_139819_cc.svg"/></button>
+        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<img class="menuIcon" src="images/noun_8293_cc.svg"/></button>
+ 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<img class="menuIcon" src="images/noun_122_cc.svg"/></button>
 	  		</div>
             <div class="sociaMediaLinks">
       		  <div class="octoLink"><img height="30px" src="images/Octo_Logo_Informal.svg" alt="Octo Consulting Logo"/></div>
