--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
       </ul>
       <hr/>
       <div class="btn-group-vertical filterGroup" role="group">
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<img class="menuIcon" src="images/microservices-icon.svg"/></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<img class="menuIcon" src="images/api.svg"/></button>
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<img class="menuIcon" src="images/big-data-icon.svg"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<img class="menuIcon" src="images/microservices-icon.svg" alt="Microservices Icon"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<img class="menuIcon" src="images/api.svg" alt="API Icon"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<img class="menuIcon" src="images/big-data-icon.svg" alt="Big Data Icon"/></button>
 	  </div>
       <div class="btn-group-vertical filterGroup" role="group">
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<img class="menuIcon" src="images/noun_148183_cc.svg"/></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<img class="menuIcon" src="images/noun_139819_cc.svg"/></button>
-        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<img class="menuIcon" src="images/noun_8293_cc.svg"/></button>
- 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<img class="menuIcon" src="images/noun_122_cc.svg"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<img class="menuIcon" src="images/noun_148183_cc.svg" alt="Healthcare Icon"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<img class="menuIcon" src="images/noun_139819_cc.svg" alt="Financial Services Icon"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<img class="menuIcon" src="images/noun_8293_cc.svg" alt="National Security Icon"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<img class="menuIcon" src="images/noun_122_cc.svg" alt="Intelligence Community"/></button>
 	  </div>
       <div class="sociaMediaLinks">
         <div class="octoLink"><img height="30px" src="images/Octo_Logo_Informal.svg" alt="Octo Consulting Logo"/></div>
@@ -212,16 +212,16 @@
             </div>
             <!--Filter-->
             <div class="btn-group-vertical filterGroup" role="group">
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<img class="menuIcon" src="images/microservices-icon.svg"/></button>
- 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<img class="menuIcon" src="images/api.svg"/></button>
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<img class="menuIcon" src="images/big-data-icon.svg"/></button>
-	  		</div>
-      		<div class="btn-group-vertical filterGroup" role="group">
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<img class="menuIcon" src="images/noun_148183_cc.svg"/></button>
- 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<img class="menuIcon" src="images/noun_139819_cc.svg"/></button>
-        	  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<img class="menuIcon" src="images/noun_8293_cc.svg"/></button>
- 			  <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<img class="menuIcon" src="images/noun_122_cc.svg"/></button>
-	  		</div>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Microservices<img class="menuIcon" src="images/microservices-icon.svg" alt="Microservices Icon"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>API/Open Data<img class="menuIcon" src="images/api.svg" alt="API Icon"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Big Data<img class="menuIcon" src="images/big-data-icon.svg" alt="Big Data Icon"/></button>
+	  </div>
+      <div class="btn-group-vertical filterGroup" role="group">
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Healthcare<img class="menuIcon" src="images/noun_148183_cc.svg" alt="Healthcare Icon"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Financial Services<img class="menuIcon" src="images/noun_139819_cc.svg" alt="Financial Services Icon"/></button>
+        <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>National Security<img class="menuIcon" src="images/noun_8293_cc.svg" alt="National Security Icon"/></button>
+ 		<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Intelligence Community<img class="menuIcon" src="images/noun_122_cc.svg" alt="Intelligence Community"/></button>
+	  </div>
             <div class="sociaMediaLinks">
       		  <div class="octoLink"><img height="30px" src="images/Octo_Logo_Informal.svg" alt="Octo Consulting Logo"/></div>
               <div class="fa fa-2x fa-facebook-square socialIcon"></div>
