Social Icons Footer Add

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -46,6 +46,9 @@
           <ul class="nav navbar-nav">
             <li><a href="#about"><span class="fa fa-users iconSpace"></span>About</a></li>
             <li><a href="#contact" id="contactLink"><span class="fa fa-envelope-o iconSpace"></span>Contact</a></li>
+                <li class="fa fa-facebook-square socialIcon socialIconTopNav" style="margin-left:10px;"></li>
+                <li class="fa fa-twitter-square socialIcon socialIconTopNav"></li>
+                <li class="fa fa-linkedin-square socialIcon socialIconTopNav"></li>
           </ul>
         </div>
     </nav>
@@ -313,7 +316,9 @@
           </div>
           </div>
           <!--Footer-->
-		  <div class="footer">&copy; Octo Consulting 2015</div>
+          <div class="row">
+		  <div class="footer"><a href="www.octoconsulting.com">&copy; Octo Consulting 2015</a> | <a href="#">Privacy</a> | <a href="#">Security</a> | <a href="#">Terms & Conditions</a></div>
+          </div>
           
       </div>
     <!-- /.container -->
