--- a/fullscreen.html
+++ b/fullscreen.html
@@ -104,19 +104,19 @@
                 <div class="item active">
                   <img src="images/splash-img.png" alt="...">
                   <div class="carousel-caption">
-                    Test Carousel Content 1..
+                    Splash Content
                   </div>
                 </div>
                 <div class="item">
-                  <img src="images/splash-img.png" alt="...">
+                  <img src="images/inflo-splash-bg.png" alt="...">
                   <div class="carousel-caption">
-                    Test Carousel Content 2..
+                    Featured App 1
                   </div>
                 </div>
                 <div class="item">
-                  <img src="images/splash-img.png" alt="...">
+                  <img src="images/MedCheck-splash-bg.png" alt="...">
                   <div class="carousel-caption">
-                    Test Carousel Content 3..
+                    Featured App 2
                   </div>
                 </div>
               </div>
@@ -229,10 +229,10 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetails">App Name</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetails">Lumify</a></div>
               <div class="cardSubTitle">Sub Title</div>
             </div>
-            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetails"/></div>
+            <div><img class="cardImage" src="images/Lumify-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetails"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus id, vulputate mauris. Morbi egestas massa et mi placerat iaculis.</div>
               <img class="capabilityIcons" src="images/HTML5_Badge.png" data-toggle="tooltip" data-placement="top" title="HTML5" alt="HTML5"/><img class="capabilityIcons" src="images/css3-Badge.png" data-toggle="tooltip" data-placement="top" title="CSS3" alt="CSS3"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/>
