Added Splash Text
Added placeholder text to splash

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -104,19 +104,31 @@
                 <div class="item active">
                   <img src="images/splash-img.png" alt="...">
                   <div class="carousel-caption">
-                    Splash Content
+                  	<div class="splashText">
+                    <h2>Headline</h2>
+                    <h4>Sub Heading Text Place Holder</h4>
+                    </div>
+                    <button type="button" class="btn btn-primary">ACTION BUTTON</button>
                   </div>
                 </div>
                 <div class="item">
                   <img src="images/inflo-splash-bg.png" alt="...">
                   <div class="carousel-caption">
-                    Featured App 1
+                  	<div class="splashText">
+                    <h2>Headline</h2>
+                    <h4>Sub Heading Text Place Holder</h4>
+                    </div>
+                    <button type="button" class="btn btn-primary">ACTION BUTTON</button>
                   </div>
                 </div>
                 <div class="item">
                   <img src="images/MedCheck-splash-bg.png" alt="...">
-                  <div class="carousel-caption">
-                    Featured App 2
+                  <div class="carousel-caption captionRight">
+                  	<div class="splashText">
+                    <h2>Headline</h2>
+                    <h4>Sub Heading Text Place Holder</h4>
+                    </div>
+                    <button type="button" class="btn btn-primary">ACTION BUTTON</button>
                   </div>
                 </div>
               </div>
