--- a/fullscreen.html
+++ b/fullscreen.html
@@ -105,7 +105,7 @@
                   <img src="images/splash-img.png" alt="...">
                   <div class="carousel-caption">
                   	<div class="splashText">
-                    <h2>Headline</h2>
+                    <h2>OLABS DIGITAL SHOWCASE</h2>
                     <h4>Sub Heading Text Place Holder</h4>
                     </div>
                     <button type="button" class="btn btn-primary">ACTION BUTTON</button>
@@ -115,20 +115,20 @@
                   <img src="images/inflo-splash-bg.png" alt="...">
                   <div class="carousel-caption">
                   	<div class="splashText">
-                    <h2>Headline</h2>
+                    <h2>Inflo</h2>
                     <h4>Sub Heading Text Place Holder</h4>
                     </div>
-                    <button type="button" class="btn btn-primary">ACTION BUTTON</button>
+                    <button type="button" class="btn btn-primary">READ MORE</button>
                   </div>
                 </div>
                 <div class="item">
                   <img src="images/MedCheck-splash-bg.png" alt="...">
                   <div class="carousel-caption captionRight">
                   	<div class="splashText">
-                    <h2>Headline</h2>
+                    <h2>MEDCHECK</h2>
                     <h4>Sub Heading Text Place Holder</h4>
                     </div>
-                    <button type="button" class="btn btn-primary">ACTION BUTTON</button>
+                    <button type="button" class="btn btn-primary">READ MORE</button>
                   </div>
                 </div>
               </div>
