Button Modal Actions on Splash

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -108,7 +108,7 @@
                     <h2>OLABS DIGITAL SHOWCASE</h2>
                     <h4>Sub Heading Text Place Holder</h4>
                     </div>
-                    <button type="button" class="btn btn-primary">ACTION BUTTON</button>
+                    <button type="button" class="btn btn-primary" >ACTION BUTTON</button>
                   </div>
                 </div>
                 <div class="item">
@@ -118,7 +118,7 @@
                     <h2>Inflo</h2>
                     <h4>Sub Heading Text Place Holder</h4>
                     </div>
-                    <button type="button" class="btn btn-primary">READ MORE</button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDetails">READ MORE</button>
                   </div>
                 </div>
                 <div class="item">
@@ -128,7 +128,7 @@
                     <h2>MEDCHECK</h2>
                     <h4>Sub Heading Text Place Holder</h4>
                     </div>
-                    <button type="button" class="btn btn-primary">READ MORE</button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDetails">READ MORE</button>
                   </div>
                 </div>
               </div>
