--- a/fullscreen.html
+++ b/fullscreen.html
@@ -442,7 +442,10 @@
 	});
 	$('.dropdown-menu').mouseleave(function() {
   		$('.dropBtnGroup').removeClass('open');
+		$('.filterButton').blur();
 	});
+	
+	
 	
 	<!--fixes focus state on static navigation-->
 	$(".menuBtn").hover(function (){
@@ -453,6 +456,7 @@
 	$(".navbar-default .navbar-nav li a").click(function (){
         $(this).blur();
     });
+	
 	
 	<!--fixes sliding nav modal interference-->
 	$("#contactLinkMobile").click(function() {
