Added content about sites

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -190,11 +190,11 @@
           <div class="card">
           	<div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsInflo">Inflo</a></div>
-              <div class="cardSubTitle">Location Data</div>
+              <div class="cardSubTitle">Get to Know your County</div>
             </div>
             <div><img class="cardImage" src="images/inflo.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsInflo"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
+              <div class="cardCatagory">Providing users with a visualization of county statistics as they pertain to environmental, demographic and natural hazard factors.</div>
               <img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/expressIcon.png" data-toggle="tooltip" data-placement="top" title="Express" alt="Express"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/rubyIcon.png" data-toggle="tooltip" data-placement="top" title="Ruby on Rails" alt="Ruby on Rails"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -208,11 +208,11 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMEDCheck">MEDCheck</a></div>
-              <div class="cardSubTitle">Check Once, Choose Once</div>
+              <div class="cardSubTitle">Know the Side Effects of Medications</div>
             </div>
             <div><img class="cardImage" src="images/medcheck-thumb.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsMEDCheck"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
+              <div class="cardCatagory">Providing users with an optimal way to view the side effects of the medication(s) they use.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -244,11 +244,11 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLumify">Lumify</a></div>
-              <div class="cardSubTitle">Sub Title</div>
+              <div class="cardSubTitle">Data + Perspective</div>
             </div>
             <div><img class="cardImage" src="images/Lumify-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLumify"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
+              <div class="cardCatagory">Providing users with a platform to visualize big and unstructured data using open sources technologies.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -309,11 +309,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">Inflo</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Users do not have a centralized mechanism to research and view county statistics in order to make informed decisions.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Users should be able to view, slice and dice a centralized dashboard that aggregates statistical information from multiple county repositories.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Users can make informed decisions regarding counties based on a dashboard that aggregates data from multiple environmental, demographic and natural hazard information repositories.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/infloDetails.png" alt="Screenshots of Inflo Application"/></div>
@@ -339,11 +339,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">MEDCheck</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Many prescription medications have serious side effects, causing "adverse effects" that are reported to the FDA. The average consumer does not have an easy mechanism to be aware of these issues.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Consumers should have an easy way to research prescription medications to see the side effects, reported adverse reactions, and any recalls.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Consumer should be able to go to a single web site to research safety information of prescription medications and make informed choices on which prescription medication to choose based on history of adverse effects, label warnings, and recalls.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/MEDCheckDetails.png" alt="Screenshots of Inflo Application"/></div>
@@ -393,11 +393,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">Lumify</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Users can analyze relationships and automatically discovers paths between entities, and establishes new links.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">This is the problem statement. Is sums up the problem that was solved by creating this app.</div>
+              <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Inflo Application"/></div>
